@@ -1,6 +1,6 @@
 NEWS for Seq66 0.99.16
 Chris Ahlstrom
-2015-07-10 to 2024-11-04
+2015-07-10 to 2024-11-07
 
 # Change Log
 
@@ -10,10 +10,18 @@ Chris Ahlstrom
 
 - Refined documentation about the Import/Export functionality.
 - Added CONFIG\_DIR\_NAME and cleaned up configure.ac.
+- Merged a fix from a pull request to update the \*.desktop files.
 
 ### Fixed
 
 - Fixed the display of tunes with various PPQNs such as 120.
+- Fixed an issue with NSM interactions introduced in version 0.99.11,
+  plus other related issue:
+  - The NSM would show two clients for "qseq66" and "seq66" when adding
+    only the "qseq66" client.
+  - Saving via a remote NSM Save command or by the File / Save menu
+    would not clear the modified flag.
+  - Closing the session would not remove any external editor windows.
 
 ### Added
 
